--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 mate-applet-streamer-0.1.3.tar.gz
 /mate-applet-streamer-0.3.10.tar.gz
 /mate-applet-streamer-0.4.0.tar.gz
+/mate-applet-streamer-0.4.1.tar.gz
